<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_ReadParameterNC" Id="{0a080461-8875-4b57-a673-44abaad03a9d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ReadParameterNC IMPLEMENTS I_ReadParameter
(*
    Read and refresh axis parameters struct on ST_MotionStage
*)
VAR
    {attribute 'no_copy'}
    AxisRef : REFERENCE TO AXIS_REF;
// NC parameters that are exposed with pytmc pragmas
    {attribute 'pytmc' := '
        pv: PLC:AxisPar
        io: i
        field: DESC Axis configuration parameters in the numerical controller.
    '}
    stAxisParametersExposed : ST_AxisParameterSetExposed;

    // MC_ReadParameterSet Output
    fbMcReadParams: MC_ReadParameterSet;
    //{attribute 'hide'}
    stAxisParameters: ST_AxisParameterSet;
    bNcParamsReadInit   : BOOL;
    NCParamsTimer : TON;
    bAxisParametersInit : BOOL;
    tRefreshDelay: TIME := T#1S;
    bUpdateEnable : BOOL;
    bExecute : BOOL;
    bError				: BOOL;
    nErrorId			: UDINT:=0;
    sMessage : T_MAXSTRING;
    bDone : BOOL;
    bBusy    : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT __ISVALIDREF(THIS^.AxisRef) THEN
    RETURN;
END_IF

THIS^.AxisRef.ReadStatus();
// Periodic update of NC parameters
NCParamsTimer( IN:=bUpdateEnable AND NOT bExecute, PT:=tRefreshDelay);
bExecute S= NCParamsTimer.Q;
fbMcReadParams(
    Parameter:=THIS^.stAxisParameters,
    Axis:=THIS^.AxisRef,
    Execute:=bUpdateEnable AND bExecute,
    Error=>bError,
    ErrorID=>nErrorID,
    Busy=>bBusy,
    Done => bDone);

// Copy axis parameters that we want to expose to the EPICS layer.
THIS^.stAxisParametersExposed.bCtrlEnablePosDiffControl     := THIS^.stAxisParameters.bCtrlEnablePosDiffControl;
THIS^.stAxisParametersExposed.bEncEnableSoftEndMaxControl   := THIS^.stAxisParameters.bEncEnableSoftEndMaxControl;
THIS^.stAxisParametersExposed.bEncEnableSoftEndMinControl   := THIS^.stAxisParameters.bEncEnableSoftEndMinControl;
THIS^.stAxisParametersExposed.fAccelerationMax              := THIS^.stAxisParameters.fAccelerationMax;
THIS^.stAxisParametersExposed.fCtrlPosDiffMax               := THIS^.stAxisParameters.fCtrlPosDiffMax;
THIS^.stAxisParametersExposed.fCtrlPosDiffMaxTime           := THIS^.stAxisParameters.fCtrlPosDiffMaxTime;
THIS^.stAxisParametersExposed.fDecelerationMax              := THIS^.stAxisParameters.fDecelerationMax;
THIS^.stAxisParametersExposed.fEncSoftEndMax                := THIS^.stAxisParameters.fEncSoftEndMax;
THIS^.stAxisParametersExposed.fEncSoftEndMin                := THIS^.stAxisParameters.fEncSoftEndMin;
THIS^.stAxisParametersExposed.fVeloMaximum                  := THIS^.stAxisParameters.fVeloMaximum;
THIS^.stAxisParametersExposed.fEncOffset               		:= THIS^.stAxisParameters.fEncOffset;
THIS^.stAxisParametersExposed.fEncScaleFactorInternal       := THIS^.stAxisParameters.fEncScaleFactorInternal;

bExecute R= bDone OR bError;
THIS^.bAxisParametersInit S= bDone;]]></ST>
    </Implementation>
    <Property Name="Aborted" Id="{eb6c713a-ae14-4aae-8e2a-0fe4445d0481}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Aborted : BOOL
]]></Declaration>
      <Get Name="Get" Id="{f67f949f-e2ba-4069-927a-e0e24cc413f2}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Active" Id="{801f778e-5bb2-47d5-80a0-c3ed9d0e6e0e}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Active : BOOL
]]></Declaration>
      <Get Name="Get" Id="{55e2ced6-d12a-441b-af90-d38eb2a717d3}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="AxisReadParamsInit" Id="{78f88bc3-cc72-458c-8f2d-1ca8c5361c73}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY AxisReadParamsInit : BOOL
]]></Declaration>
      <Get Name="Get" Id="{c9c8de24-42ba-4328-8718-b4ef40ba79c8}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[AxisReadParamsInit := bAxisParametersInit;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Busy" Id="{22f692ee-01c6-4a60-890c-87d05d869350}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Busy : BOOL
]]></Declaration>
      <Get Name="Get" Id="{cb5a710f-fdfd-425d-a3db-4a2ca84d2713}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Busy := bBusy;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="CallAfterInit" Id="{f18b7d6f-c3da-460b-84aa-32d432fd132a}">
      <Declaration><![CDATA[METHOD PUBLIC CallAfterInit
VAR_INPUT
    AxisRef : REFERENCE TO AXIS_REF;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.AxisRef REF= AxisRef;

]]></ST>
      </Implementation>
    </Method>
    <Property Name="Done" Id="{6a425195-42c1-4362-9605-a1abf17cb028}">
      <Declaration><![CDATA[{warning 'Add property implementation'}
PROPERTY Done : BOOL
]]></Declaration>
      <Get Name="Get" Id="{a7bf1f50-dd9e-4d56-8de5-d617db746ffc}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Done := bDone;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Error" Id="{9c9b784c-64ad-45f6-9c7e-0135e01c740f}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY Error : BOOL
]]></Declaration>
      <Get Name="Get" Id="{81197bc9-252b-4651-b7ec-0e59bda13a17}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Error := bError;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ErrorID" Id="{54050bbe-c894-4265-8ce6-db4f8c907c4e}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY ErrorID : UDINT
]]></Declaration>
      <Get Name="Get" Id="{51259382-0371-44cd-8353-1addb15d13a4}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ErrorID := nErrorID;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="FB_Init" Id="{9a2f321a-6442-4481-94f8-cad0f90b6a8f}">
      <Declaration><![CDATA[//FB_Init is always available implicitly and it is used primarily for initialization.
//The return value is not evaluated. For a specific influence, you can also declare the
//methods explicitly and provide additional code there with the standard initialization
//code. You can evaluate the return value.
METHOD FB_Init: BOOL
VAR_INPUT
    bInitRetains: BOOL; // TRUE: the retain variables are initialized (reset warm / reset cold)
    bInCopyCode: BOOL;  // TRUE: the instance will be copied to the copy code afterward (online change)
    AxisRef : REFERENCE TO AXIS_REF;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.AxisRef REF= AxisRef;
]]></ST>
      </Implementation>
    </Method>
    <Property Name="Message" Id="{5a724cf4-bb87-4860-9c8b-1548832af991}">
      <Declaration><![CDATA[PROPERTY Message : T_MAXSTRING
]]></Declaration>
      <Get Name="Get" Id="{0e6a7eb8-6fa2-4ab3-ba2f-5e01d94ba75a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Message := sMessage;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="ReadParameters" Id="{7e1988df-13bf-409f-9bba-5c8975b3fe8b}">
      <Declaration><![CDATA[METHOD ReadParameters
VAR_INPUT
    Enable: BOOL;
    RefreshDelay: TIME;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bUpdateEnable:= Enable;
THIS^.tRefreshDelay:= RefreshDelay;]]></ST>
      </Implementation>
    </Method>
    <Property Name="RefVeloSearch" Id="{8705c180-d9e3-4f14-a09b-5c1fee343bd9}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY RefVeloSearch : LREAL
]]></Declaration>
      <Get Name="Get" Id="{cc5c8632-aa63-4a37-8470-a4ffc3f9a6d9}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[RefVeloSearch := THIS^.stAxisParameters.fRefVeloSearch;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="RefVeloSync" Id="{c30dca5c-0998-42d3-aa48-35c4d73ce582}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY RefVeloSync : LREAL
]]></Declaration>
      <Get Name="Get" Id="{700b38d3-f6d3-4d02-a47e-cfd3c1cbbb52}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[RefVeloSync:= THIS^.stAxisParameters.fRefVeloSync;]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>